--- a/index.html
+++ b/index.html
@@ -3,7 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Ziferblat</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
-  <body></body>
+  <body>
+
+    <div class="section__sidebar">
+      <div class="sidebar">
+        <div class="sidebar__logo">
+          <img src="img/logo.png" alt="ziferblat logo" class="sidebar__logo-img">
+        </div>
+        <ul class="sidebar__items">
+          <li class="sidebar__item"><ion-icon name="home-outline" class="sidebar__icon"></ion-icon></li>
+          <li class="sidebar__item"><ion-icon name="people-outline" class="sidebar__icon"></ion-icon></li>
+          <li class="sidebar__item"><ion-icon name="calendar-outline" class="sidebar__icon"></ion-icon></li>
+          <li class="sidebar__item"><ion-icon name="calendar-outline" class="sidebar__icon"></ion-icon></li>
+          <li class="sidebar__item"><img src="img/clock.png" alt="clock icon" class="clock__img"></li>
+          <li class="sidebar__item"><ion-icon name="chatbubble-outline" class="sidebar__icon"></ion-icon></li>
+        </ul>
+        <div class="sidebar__doubt">
+          <p>?</p>
+        </div>
+      </div>
+    </div>
+    
+    
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  </body>
 </html>
