--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
             <div class="card card--1">
               <div class="card__header">
                 <div class="card__imgs">
-                  <div class="card__img"></div>
-                  <img src="img/face-2.jpg" alt="faces" class="card__img">
-                  <img src="img/face-3.jpg" alt="faces" class="card__img">
+                  <div class="card__img card__img-1">+3</div>
+                  <img src="img/face-2.jpg" alt="faces" class="card__img card__img-2">
+                  <img src="img/face-3.jpg" alt="faces" class="card__img card__img-3">
                 </div>
                 <div class="card__menu">
                   <a href="#"><img src="img/two-dots.png" alt="two dots" class="card__dots"></a>
@@ -132,9 +132,9 @@
             <div class="card card--2">
               <div class="card__header">
                 <div class="card__imgs">
-                  <div class="card__img">+2</div>
-                  <img src="img/face-4.jpg" alt="faces" class="card__img">
-                  <img src="img/face-7.jpg" alt="faces" class="card__img">
+                  <div class="card__img card__img-1 img-br-2">+2</div>
+                  <img src="img/face-4.jpg" alt="faces" class="card__img card__img-2 img-br-2">
+                  <img src="img/face-7.jpg" alt="faces" class="card__img card__img-3 img-br-2">
                 </div>
                 <div class="card__menu">
                   <a href="#"><img src="img/two-dots.png" alt="two dots" class="card__dots"></a>
@@ -234,7 +234,7 @@
               <a href="#" class="heading--3">Edit</a>
             </div>
             <div class="tasks__body">
-              <div class="task">
+              <div class="task task--1">
                 <h3 class="heading--3">Add new</h3>
                 <p class="">+</p>
               </div>
