menu icon fixed

--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
         <div class="sidebar__left__logos">
           <img src="img/logo.png" alt="ziferblat logo" class="sidebar__left__logo">
         </div>
-        <a href="#mobileSidebar" class="logo__menu">
+        <!-- <a href="#mobileSidebar" class="logo__menu">
           <input type="checkbox" name="mobileSidebar" id="mobileSidebar" class="menu__input">
           <label for="mobileSidebar"><ion-icon name="menu" class="menu__icon"></ion-icon></label>
-        </a>
+        </a> -->
+        <!-- Menu Toggle -->
         <ul class="sidebar__left__items">
           <li class="sidebar__left__item"><a href="#mobileSidebar"><ion-icon name="home-outline" class="sidebar__left__icon"></ion-icon></a></li>
           <li class="sidebar__left__item"><a href="#mobileSidebar"><ion-icon name="people-outline" class="sidebar__left__icon"></ion-icon></a></li>
           <li class="sidebar__left__item"><a href="#mobileSidebar"><ion-icon name="calendar-outline" class="sidebar__left__icon"></ion-icon></a></li>
           <li class="sidebar__left__item"><a href="#mobileSidebar"><img href="#mobileSidebar" src="img/clock.png" alt="clock icon" class="clock__img"></a></li>
           <li class="sidebar__left__item"><a href="#mobileSidebar"><ion-icon name="chatbubble-outline" class="sidebar__left__icon"></ion-icon></a></li>
+          <li class="sidebar__left__item"><a href="#mobileSidebar"><ion-icon name="menu-outline" class="sidebar__left__icon"></ion-icon></a></li>
         </ul>
         <div class="sidebar__left__doubt">
           <p>?</p>
